Fix quotation mark typo in text area creation
There wa a quotation mark in the textarea call, resulting in a lack of a text bubble during creation

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h2>Type the Sentence as Fast as Possible in the Below Textbox</h2>
                 <p id = 'text'></p>
             <form>
-              <textarea"> </textarea>
+              <textarea> </textarea>
             </form>            
           </div>
           <div class="column" style="background-color:rgb(233, 233, 233);">
